<resources>
    <string name="app_name">CulturalCenterLibrary</string>
    <string name="cancel">cancel</string>
    <string name="date">Date</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="e_g_john_doe">e.g. John Doe</string>
    <string name="cultural_center_library">Cultural Center Library</string>
    <string name="qr_code_found">QR Code Found</string>
    <string name="barcode_text">Barcode Text</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="barcode_view">Barcode scanning view</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>