<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lib_greyblue"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center">
    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cultural_center_library"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="25dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30sp"
        android:layout_marginEnd="20dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textColor="#363A43"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/please_enter_your_name"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="#7A8089"/>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_marginTop="20dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/txtEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/lib_greyblue"
                        android:hint="@string/e_g_john_doe"
                        android:inputType="textCapWords"
                        android:text=""
                        android:textColor="#363A43"
                        android:textColorHint="#455A64" />

                    <ImageButton
                        android:id="@+id/qrImageBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/txtEdit"
                        android:layout_alignEnd="@+id/txtEdit"
                        android:layout_alignBottom="@+id/txtEdit"
                        android:background="@color/lib_greyblue"
                        android:paddingStart="50dp"
                        android:paddingEnd="10dp"
                        android:src="@drawable/ic_qr_code_24_mdpi"
                        tools:ignore="SpeakableTextPresentCheck" />
                </RelativeLayout>


            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_margin="16dp"
                    android:background="@color/lib_yellow"
                    android:gravity="center"/>

                <!--                <Button-->
                <!--                    android:id="@+id/cancel_button"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="@string/cancel"-->
                <!--                    android:layout_margin="16dp"-->
                <!--                    android:gravity="center"-->
                <!--                    />-->
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>